tests/neg/modifier-not-allowed.scala
object Test {
  opaque def o: Int = 3 // error
}